--- a/HTML/CSS/Melon My Chart.css
+++ b/HTML/CSS/Melon My Chart.css
@@ -6,6 +6,9 @@ h3 {
     text-align: center;
 }
 
+a {
+    text-decoration: none;
+}
 .music {
     background-color: #eee;
     border-radius: 20px;
@@ -29,5 +32,11 @@ h3 {
 }
 
 .lyrics {
+    font-size: 25px;
     text-align: center;
+    font-family: 'Nanum Pen Script', cursive;
         }
+
+.melon-link {
+    text-align: right;
+}
