--- a/HTML/login/css/styles.css
+++ b/HTML/login/css/styles.css
@@ -36,6 +36,10 @@
     padding: 10px;
   }
   
+  .submit-btn:hover {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.50);
+  }
+  
   .links {
     margin-bottom: 30px;
     text-align: center;
