--- a/HTML/navbar/css/styles.css
+++ b/HTML/navbar/css/styles.css
@@ -24,6 +24,31 @@ body {
   vertical-align: middle;
 }
 
+#menu {
+  list-style: none;
+  float: right;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+}
+
+#menu li {
+  float: left;
+}
+
+#menu li a {
+  padding-left: 10px;
+  padding-right: 10px;
+  line-height: 60px;
+  display: block;
+  color: black;
+  text-decoration: none;
+}
+
+#menu li a:hover {
+  background-color: #eeeeee;
+}
+
 .hero-header {
   background-image: url("../images/hero_image.jpg");
   background-size: cover;
