--- a/JavaScript/interactiveJS/todoList/style.css
+++ b/JavaScript/interactiveJS/todoList/style.css
@@ -39,3 +39,8 @@ body {
 	margin: 8px auto 15px;
 	border-bottom: 1px solid #9600ff;
 }
+
+.done {
+  opacity: 0.5;
+  text-decoration: line-through;
+}
