--- a/React/rockpaperscissors/src/components/HandButton.css
+++ b/React/rockpaperscissors/src/components/HandButton.css
@@ -5,11 +5,7 @@
   outline: none;
   text-align: center;
   cursor: pointer;
-  background-color: transparent;
-  background-image: url('../assets/purple.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
+  background: transparent url('../assets/purple.svg') center no-repeat / contain;
 }
 
 .HandButton .HandButton-icon {
