--- a/HTML/paradise_park/css/styles.css
+++ b/HTML/paradise_park/css/styles.css
@@ -60,7 +60,7 @@ body {
   background-image: url("../images/hero_header.jpg");
   background-size: cover;
   background-position: center center;
-  height: 750px;
+  height: 100vh;
   line-height: 750px;
 }
 
