--- a/React/mbti/src/components/ColorItem.module.css
+++ b/React/mbti/src/components/ColorItem.module.css
@@ -1,10 +1,10 @@
 /* 시작: 컬러 리스트 */
 .card {
-  padding: 16px 48px;
-  border-radius: 8px;
   display: flex;
   align-items: center;
+  border-radius: 8px;
   cursor: pointer;
+  padding: 16px 48px;
 }
 .card:hover {
   background: #f5f7fb;
@@ -21,19 +21,23 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  text-align: center;
 }
 .card .index {
-  margin-right: 42px;
+  width: 58px;
   flex-shrink: 0;
+  margin-right: 42px;
 }
 
 .card .mbti {
   color: #464e5e;
+  flex-shrink: 0;
   font-family: Pretendard;
   font-size: 25px;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+  text-align: center;
   border-radius: 8px;
   background: rgba(178, 189, 204, 0.2);
   padding: 8px;
@@ -41,21 +45,20 @@
 }
 
 .card .arrow {
-  flex-grow: 1;
-  /* width: 100%; */
   height: 0;
+  flex-grow: 1;
   border-bottom: 2px dashed #bfc8da;
   position: relative;
 }
 .card .arrow .arrow-icon {
   position: absolute;
-  top: -6px;
+  top: -12px;
   right: -6px;
 }
 .card .color-board {
-  flex-shrink: 0;
   width: 40px;
   height: 40px;
+  flex-shrink: 0;
   border-radius: 8px;
   border: 3px solid #e8e8e8;
   background: #9441ff;
@@ -63,3 +66,37 @@
 }
 
 /* 끝: 컬러 리스트 */
+@media screen and (max-width: 944px) {
+  .card {
+    font-size: 16px;
+    padding: 18px 16px;
+  }
+
+  .card .index {
+    width: 37px;
+    font-size: 16px;
+    margin-right: 16px;
+  }
+
+  .card .mbti {
+    width: 54px;
+    font-size: 16px;
+    margin-right: 16px;
+  }
+
+  .card .arrow .arrow-icon {
+    top: -6px;
+    right: -6px;
+  }
+
+  .card .color-board {
+    font-size: 16px;
+    margin-right: 8px;
+    margin-left: 16px;
+  }
+
+  .card .color-hex {
+    font-size: 16px;
+    width: 72px;
+  }
+}
