--- a/React/mbti/src/components/Container.module.css
+++ b/React/mbti/src/components/Container.module.css
@@ -1,13 +1,21 @@
 .container {
+  display: flex;
   width: 100%;
   max-width: 865px;
-  display: flex;
   gap: 40px;
   margin: 80px auto;
 }
+.container.new {
+  max-width: 416px;
+  display: block;
+}
 
-@media (max-width: 944px) {
+@media screen and (max-width: 944px) {
   .container {
+    display: block;
+    position: relative;
+    z-index: 0;
+    margin: 0;
     padding: 24px 16px;
   }
 }
